--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 model/variables/variables.data-00000-of-00001 filter=lfs diff=lfs merge=lfs -text
+model/saved_model.pb filter=lfs diff=lfs merge=lfs -text
